--- a/deployments/helm/infra/postgres/templates/postgres.yaml
+++ b/deployments/helm/infra/postgres/templates/postgres.yaml
@@ -1,3 +1,13 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: local-storage
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
+reclaimPolicy: Delete
+
+---
+
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -6,13 +16,21 @@ metadata:
     type: local
     app: {{ include "postgres.fullname" . }}
 spec:
-  storageClassName: manual
+  storageClassName: local-storage
   capacity:
     storage: 10Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
     path: "/mnt/data/postgres"
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - docker-desktop
 
 ---
 apiVersion: v1
@@ -59,7 +77,7 @@ spec:
     - metadata:
         name: postgres-data
       spec:
-        storageClassName: manual
+        storageClassName: local-storage
         accessModes:
           - ReadWriteOnce
         resources:
