add github action

--- a/deployments/helm/infra/postgres/values.yaml
+++ b/deployments/helm/infra/postgres/values.yaml
@@ -1,4 +1,4 @@
 postgres:
-  user: postgres # DB user
-  password: postgres # DB password
-  db: postgres # DB name
+  user: xxxxx
+  password: xxxxx
+  db: xxxxx
