--- a/deployments/helm/infra/postgres/templates/postgres.yaml
+++ b/deployments/helm/infra/postgres/templates/postgres.yaml
@@ -1,13 +1,3 @@
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: local-storage
-provisioner: kubernetes.io/no-provisioner
-volumeBindingMode: WaitForFirstConsumer
-reclaimPolicy: Delete
-
----
-
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -16,21 +6,28 @@ metadata:
     type: local
     app: {{ include "postgres.fullname" . }}
 spec:
-  storageClassName: local-storage
+  storageClassName: manual
   capacity:
     storage: 10Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
     path: "/mnt/data/postgres"
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-        - matchExpressions:
-            - key: kubernetes.io/hostname
-              operator: In
-              values:
-                - docker-desktop
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  namespace: {{ .Release.Namespace }}
+  name: {{ include "postgres.fullname" . }}-claim
+spec:
+  storageClassName: manual
+  volumeName: {{ include "postgres.fullname" . }}-volume
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
 
 ---
 apiVersion: v1
@@ -40,10 +37,11 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "postgres.labels" . | nindent 4 }}
+type: Opaque
 data:
-  POSTGRES_USER: {{ b64enc .Values.postgres.user }}
-  POSTGRES_PASSWORD: {{ b64enc .Values.postgres.password }}
-  POSTGRES_DB: {{ b64enc .Values.postgres.db }}
+  POSTGRES_USER: {{ .Values.postgres.user | b64enc | quote }}
+  POSTGRES_PASSWORD: {{ .Values.postgres.password | b64enc | quote }}
+  POSTGRES_DB: {{ .Values.postgres.db | b64enc | quote }}
 
 ---
 apiVersion: apps/v1
@@ -73,16 +71,17 @@ spec:
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql
-  volumeClaimTemplates:
-    - metadata:
-        name: postgres-data
-      spec:
-        storageClassName: local-storage
-        accessModes:
-          - ReadWriteOnce
-        resources:
-          requests:
-            storage: 10Gi
+      volumes:
+        - name: postgres-data
+          persistentVolumeClaim:
+            claimName: {{ include "postgres.fullname" . }}-claim
+      resources:
+        requests:
+          memory: 512Mi
+          cpu: 250m
+        limits:
+          memory: 1Gi
+          cpu: 500m
 
 ---
 apiVersion: v1
