--- a/.github/workflows/migration.yaml
+++ b/.github/workflows/migration.yaml
@@ -33,7 +33,7 @@ jobs:
         run: |
           echo "$MIGRATION_PUBLIC_KEY" > /tmp/pubkey.txt
           tar -C ./internal/infra/db -cf - migrations \
-            | age -r "$(cat /tmp/pubkey.txt)" -o migrations.tar.gz.age
+            | age -r "$(cat /tmp/pubkey.txt)" -o migrations.tar.age
         env:
           MIGRATION_PUBLIC_KEY: ${{ secrets.MIGRATION_PUBLIC_KEY }}
 
